[package]
name = "tokio-shared-udp-socket"
version = "0.6.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Easily share a UDP socket between different futures in tokio"
repository = "https://github.com/canndrew/tokio-shared-udp-socket"
keywords = ["tokio", "futures", "udp"]
license = "GPL-3.0"

[dependencies]
futures = "0.1.17"
future-utils = "0.3.1"
tokio = "0.1.7"
unwrap = "1.1"
bytes = "0.4.5"
void = "1"
net-literals = "0.1"
log = "0.3.8"

